@@ -6,19 +6,25 @@
 
 gchar *s = N_("MemProf");
 gchar *s = N_("_Run...");
+gchar *s = N_("Save _Profile...");
+gchar *s = N_("Save _Leak Info...");
+gchar *s = N_("_Process");
+gchar *s = N_("Generate _Profile");
+gchar *s = N_("Generate _Leak Report");
+gchar *s = N_("_Kill");
+gchar *s = N_("_Detach");
 gchar *s = N_("Process _Tree");
-gchar *s = N_("Generate Profile");
-gchar *s = N_("Generate Leak Info");
-gchar *s = N_("Save Profile...");
-gchar *s = N_("Save Leak Info...");
-gchar *s = N_("Follow fork()");
-gchar *s = N_("Follow exec()");
-gchar *s = N_("Open File");
+gchar *s = N_("Follow _fork()");
+gchar *s = N_("Follow _exec()");
+gchar *s = N_("Run Program");
 gchar *s = N_("Run");
-gchar *s = N_("Detach");
+gchar *s = N_("Run Program");
+gchar *s = N_("Kill");
+gchar *s = N_("Create Profile");
 gchar *s = N_("Profile");
+gchar *s = N_("Check for Leaks");
 gchar *s = N_("Leaks");
-gchar *s = N_("Save File");
+gchar *s = N_("Save Report");
 gchar *s = N_("Save");
 gchar *s = N_("0k");
 gchar *s = N_("32k");
@@ -57,11 +63,11 @@ gchar *s = N_("Profile Options");
 gchar *s = N_("Command to run on double click in stack trace:");
 gchar *s = N_("Leak Detection Options");
 gchar *s = N_("Adding Skip Function");
-gchar *s = N_("Add");
 gchar *s = N_("Enter the name of a function to skip when computing  profiles");
+gchar *s = N_("Add");
 gchar *s = N_("Run Executable");
-gchar *s = N_("Run");
 gchar *s = N_("Enter pathname to a executable");
+gchar *s = N_("Run");
 gchar *s = N_("MemProf - Processes");
 gchar *s = N_("PID");
 gchar *s = N_("Command Line");
