@@ -10,6 +10,17 @@
   <language>C</language>
   <gnome_support>True</gnome_support>
   <gettext_support>True</gettext_support>
+  <use_widget_names>False</use_widget_names>
+  <output_main_file>False</output_main_file>
+  <output_support_files>True</output_support_files>
+  <output_build_files>True</output_build_files>
+  <backup_source_files>True</backup_source_files>
+  <main_source_file>interface.c</main_source_file>
+  <main_header_file>interface.h</main_header_file>
+  <handler_source_file>callbacks.c</handler_source_file>
+  <handler_header_file>callbacks.h</handler_header_file>
+  <support_source_file>support.c</support_source_file>
+  <support_header_file>support.h</support_header_file>
   <output_translatable_strings>True</output_translatable_strings>
   <translatable_strings_file>memprof-strings.c</translatable_strings_file>
 </project>
@@ -89,61 +100,13 @@
 
 	    <widget>
 	      <class>GtkMenuItem</class>
-	      <name>process_tree1</name>
-	      <signal>
-		<name>activate</name>
-		<handler>process_tree_cb</handler>
-		<last_modification_time>Tue, 23 May 2000 18:48:50 GMT</last_modification_time>
-	      </signal>
-	      <label>Process _Tree</label>
-	      <right_justify>False</right_justify>
-	    </widget>
-
-	    <widget>
-	      <class>GtkMenuItem</class>
-	      <name>separator8</name>
-	      <right_justify>False</right_justify>
-	    </widget>
-
-	    <widget>
-	      <class>GtkMenuItem</class>
-	      <name>generate_profile1</name>
-	      <signal>
-		<name>activate</name>
-		<handler>generate_profile_cb</handler>
-		<last_modification_time>Sat, 16 Oct 1999 22:37:29 GMT</last_modification_time>
-	      </signal>
-	      <label>Generate Profile</label>
-	      <right_justify>False</right_justify>
-	    </widget>
-
-	    <widget>
-	      <class>GtkMenuItem</class>
-	      <name>generate_leak_info1</name>
-	      <signal>
-		<name>activate</name>
-		<handler>generate_leak_cb</handler>
-		<last_modification_time>Sat, 16 Oct 1999 22:37:39 GMT</last_modification_time>
-	      </signal>
-	      <label>Generate Leak Info</label>
-	      <right_justify>False</right_justify>
-	    </widget>
-
-	    <widget>
-	      <class>GtkMenuItem</class>
-	      <name>separator4</name>
-	      <right_justify>False</right_justify>
-	    </widget>
-
-	    <widget>
-	      <class>GtkMenuItem</class>
 	      <name>save_profile1</name>
 	      <signal>
 		<name>activate</name>
 		<handler>save_profile_cb</handler>
 		<last_modification_time>Sat, 16 Oct 1999 22:37:55 GMT</last_modification_time>
 	      </signal>
-	      <label>Save Profile...</label>
+	      <label>Save _Profile...</label>
 	      <right_justify>False</right_justify>
 	    </widget>
 
@@ -155,7 +118,7 @@
 		<handler>save_leak_cb</handler>
 		<last_modification_time>Sat, 16 Oct 1999 22:38:03 GMT</last_modification_time>
 	      </signal>
-	      <label>Save Leak Info...</label>
+	      <label>Save _Leak Info...</label>
 	      <right_justify>False</right_justify>
 	    </widget>
 
@@ -185,6 +148,91 @@
 		<last_modification_time>Sat, 16 Oct 1999 22:38:11 GMT</last_modification_time>
 	      </signal>
 	      <stock_item>GNOMEUIINFO_MENU_EXIT_ITEM</stock_item>
+	    </widget>
+	  </widget>
+	</widget>
+
+	<widget>
+	  <class>GtkMenuItem</class>
+	  <name>process1</name>
+	  <label>_Process</label>
+	  <right_justify>False</right_justify>
+
+	  <widget>
+	    <class>GtkMenu</class>
+	    <name>process1_menu</name>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>generate_profile1</name>
+	      <signal>
+		<name>activate</name>
+		<handler>generate_profile_cb</handler>
+		<last_modification_time>Sat, 16 Oct 1999 22:37:29 GMT</last_modification_time>
+	      </signal>
+	      <label>Generate _Profile</label>
+	      <right_justify>False</right_justify>
+	    </widget>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>generate_leak_info1</name>
+	      <signal>
+		<name>activate</name>
+		<handler>generate_leak_cb</handler>
+		<last_modification_time>Sat, 16 Oct 1999 22:37:39 GMT</last_modification_time>
+	      </signal>
+	      <label>Generate _Leak Report</label>
+	      <right_justify>False</right_justify>
+	    </widget>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>separator8</name>
+	      <right_justify>False</right_justify>
+	    </widget>
+
+	    <widget>
+	      <class>GtkPixmapMenuItem</class>
+	      <name>kill1</name>
+	      <signal>
+		<name>activate</name>
+		<handler>kill_cb</handler>
+		<last_modification_time>Wed, 24 May 2000 08:05:56 GMT</last_modification_time>
+	      </signal>
+	      <label>_Kill</label>
+	      <right_justify>False</right_justify>
+	      <stock_icon>GNOME_STOCK_MENU_CLOSE</stock_icon>
+	    </widget>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>detach1</name>
+	      <signal>
+		<name>activate</name>
+		<handler>detach_cb</handler>
+		<last_modification_time>Wed, 24 May 2000 07:51:31 GMT</last_modification_time>
+	      </signal>
+	      <label>_Detach</label>
+	      <right_justify>False</right_justify>
+	    </widget>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>separator9</name>
+	      <right_justify>False</right_justify>
+	    </widget>
+
+	    <widget>
+	      <class>GtkMenuItem</class>
+	      <name>process_tree1</name>
+	      <signal>
+		<name>activate</name>
+		<handler>process_tree_cb</handler>
+		<last_modification_time>Tue, 23 May 2000 18:48:50 GMT</last_modification_time>
+	      </signal>
+	      <label>Process _Tree</label>
+	      <right_justify>False</right_justify>
 	    </widget>
 	  </widget>
 	</widget>
@@ -223,7 +271,7 @@
 		<handler>follow_fork_cb</handler>
 		<last_modification_time>Wed, 10 Nov 1999 15:32:44 GMT</last_modification_time>
 	      </signal>
-	      <label>Follow fork()</label>
+	      <label>Follow _fork()</label>
 	      <active>False</active>
 	      <always_show_toggle>False</always_show_toggle>
 	    </widget>
@@ -236,7 +284,7 @@
 		<handler>follow_exec_cb</handler>
 		<last_modification_time>Wed, 10 Nov 1999 15:33:56 GMT</last_modification_time>
 	      </signal>
-	      <label>Follow exec()</label>
+	      <label>Follow _exec()</label>
 	      <active>True</active>
 	      <always_show_toggle>False</always_show_toggle>
 	    </widget>
@@ -297,7 +345,7 @@
 	  <class>GtkButton</class>
 	  <child_name>Toolbar:button</child_name>
 	  <name>button2</name>
-	  <tooltip>Open File</tooltip>
+	  <tooltip>Run Program</tooltip>
 	  <signal>
 	    <name>clicked</name>
 	    <handler>run_cb</handler>
@@ -310,20 +358,22 @@
 	<widget>
 	  <class>GtkButton</class>
 	  <child_name>Toolbar:button</child_name>
-	  <name>button25</name>
+	  <name>button26</name>
+	  <tooltip>Run Program</tooltip>
 	  <signal>
 	    <name>clicked</name>
-	    <handler>detach_cb</handler>
-	    <last_modification_time>Tue, 23 May 2000 21:07:40 GMT</last_modification_time>
+	    <handler>kill_cb</handler>
+	    <last_modification_time>Wed, 24 May 2000 08:14:43 GMT</last_modification_time>
 	  </signal>
-	  <label>Detach</label>
-	  <stock_pixmap>GNOME_STOCK_PIXMAP_REMOVE</stock_pixmap>
+	  <label>Kill</label>
+	  <stock_pixmap>GNOME_STOCK_PIXMAP_CLOSE</stock_pixmap>
 	</widget>
 
 	<widget>
 	  <class>GtkButton</class>
 	  <child_name>Toolbar:button</child_name>
 	  <name>button4</name>
+	  <tooltip>Create Profile</tooltip>
 	  <signal>
 	    <name>clicked</name>
 	    <handler>generate_profile_cb</handler>
@@ -337,6 +387,7 @@
 	  <class>GtkButton</class>
 	  <child_name>Toolbar:button</child_name>
 	  <name>button24</name>
+	  <tooltip>Check for Leaks</tooltip>
 	  <signal>
 	    <name>clicked</name>
 	    <handler>generate_leak_cb</handler>
@@ -350,7 +401,7 @@
 	  <class>GtkButton</class>
 	  <child_name>Toolbar:button</child_name>
 	  <name>button3</name>
-	  <tooltip>Save File</tooltip>
+	  <tooltip>Save Report</tooltip>
 	  <signal>
 	    <name>clicked</name>
 	    <handler>save_current_cb</handler>
@@ -1264,42 +1315,6 @@
     </child>
 
     <widget>
-      <class>GtkHButtonBox</class>
-      <child_name>GnomeDialog:action_area</child_name>
-      <name>dialog-action_area2</name>
-      <layout_style>GTK_BUTTONBOX_END</layout_style>
-      <spacing>8</spacing>
-      <child_min_width>85</child_min_width>
-      <child_min_height>27</child_min_height>
-      <child_ipad_x>7</child_ipad_x>
-      <child_ipad_y>0</child_ipad_y>
-      <child>
-	<padding>0</padding>
-	<expand>False</expand>
-	<fill>True</fill>
-	<pack>GTK_PACK_END</pack>
-      </child>
-
-      <widget>
-	<class>GtkButton</class>
-	<name>SkipAddDialog-add</name>
-	<can_default>True</can_default>
-	<has_default>True</has_default>
-	<can_focus>True</can_focus>
-	<label>Add</label>
-	<stock_pixmap>GNOME_STOCK_PIXMAP_ADD</stock_pixmap>
-      </widget>
-
-      <widget>
-	<class>GtkButton</class>
-	<name>button15</name>
-	<can_default>True</can_default>
-	<can_focus>True</can_focus>
-	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
-      </widget>
-    </widget>
-
-    <widget>
       <class>GtkVBox</class>
       <name>vbox4</name>
       <homogeneous>False</homogeneous>
@@ -1366,6 +1381,42 @@
 	</child>
       </widget>
     </widget>
+
+    <widget>
+      <class>GtkHButtonBox</class>
+      <child_name>GnomeDialog:action_area</child_name>
+      <name>dialog-action_area2</name>
+      <layout_style>GTK_BUTTONBOX_END</layout_style>
+      <spacing>8</spacing>
+      <child_min_width>85</child_min_width>
+      <child_min_height>27</child_min_height>
+      <child_ipad_x>7</child_ipad_x>
+      <child_ipad_y>0</child_ipad_y>
+      <child>
+	<padding>0</padding>
+	<expand>False</expand>
+	<fill>True</fill>
+	<pack>GTK_PACK_END</pack>
+      </child>
+
+      <widget>
+	<class>GtkButton</class>
+	<name>SkipAddDialog-add</name>
+	<can_default>True</can_default>
+	<has_default>True</has_default>
+	<can_focus>True</can_focus>
+	<label>Add</label>
+	<stock_pixmap>GNOME_STOCK_PIXMAP_ADD</stock_pixmap>
+      </widget>
+
+      <widget>
+	<class>GtkButton</class>
+	<name>button15</name>
+	<can_default>True</can_default>
+	<can_focus>True</can_focus>
+	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
+      </widget>
+    </widget>
   </widget>
 </widget>
 
@@ -1394,42 +1445,6 @@
       <expand>True</expand>
       <fill>True</fill>
     </child>
-
-    <widget>
-      <class>GtkHButtonBox</class>
-      <child_name>GnomeDialog:action_area</child_name>
-      <name>dialog-action_area4</name>
-      <layout_style>GTK_BUTTONBOX_END</layout_style>
-      <spacing>8</spacing>
-      <child_min_width>85</child_min_width>
-      <child_min_height>27</child_min_height>
-      <child_ipad_x>7</child_ipad_x>
-      <child_ipad_y>0</child_ipad_y>
-      <child>
-	<padding>0</padding>
-	<expand>False</expand>
-	<fill>True</fill>
-	<pack>GTK_PACK_END</pack>
-      </child>
-
-      <widget>
-	<class>GtkButton</class>
-	<name>RunDialog-run</name>
-	<can_default>True</can_default>
-	<has_default>True</has_default>
-	<can_focus>True</can_focus>
-	<label>Run</label>
-	<stock_pixmap>GNOME_STOCK_PIXMAP_FORWARD</stock_pixmap>
-      </widget>
-
-      <widget>
-	<class>GtkButton</class>
-	<name>button21</name>
-	<can_default>True</can_default>
-	<can_focus>True</can_focus>
-	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
-      </widget>
-    </widget>
 
     <widget>
       <class>GtkHBox</class>
@@ -1493,6 +1508,42 @@
 	<text_visible>True</text_visible>
 	<text_max_length>0</text_max_length>
 	<text></text>
+      </widget>
+    </widget>
+
+    <widget>
+      <class>GtkHButtonBox</class>
+      <child_name>GnomeDialog:action_area</child_name>
+      <name>dialog-action_area4</name>
+      <layout_style>GTK_BUTTONBOX_END</layout_style>
+      <spacing>8</spacing>
+      <child_min_width>85</child_min_width>
+      <child_min_height>27</child_min_height>
+      <child_ipad_x>7</child_ipad_x>
+      <child_ipad_y>0</child_ipad_y>
+      <child>
+	<padding>0</padding>
+	<expand>False</expand>
+	<fill>True</fill>
+	<pack>GTK_PACK_END</pack>
+      </child>
+
+      <widget>
+	<class>GtkButton</class>
+	<name>RunDialog-run</name>
+	<can_default>True</can_default>
+	<has_default>True</has_default>
+	<can_focus>True</can_focus>
+	<label>Run</label>
+	<stock_pixmap>GNOME_STOCK_PIXMAP_FORWARD</stock_pixmap>
+      </widget>
+
+      <widget>
+	<class>GtkButton</class>
+	<name>button21</name>
+	<can_default>True</can_default>
+	<can_focus>True</can_focus>
+	<stock_button>GNOME_STOCK_BUTTON_CANCEL</stock_button>
       </widget>
     </widget>
   </widget>
