@@ -1,3 +1,11 @@
+Wed May 24 04:22:28 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* main.c gui.h (process_window_maybe_kill) process.[ch]
+	  (process_kill): Add functions for killing processes.
+
+	* memprof.glade main.c: Menu reorganization, replace detach
+	toolbar item with kill.
+
 Wed Jan 12 10:42:35 2000  Owen Taylor  <otaylor@redhat.com>
 
 	* configure.in (MEMPROF_LIBS): Link against -lbfd and
